objects/voice_connector__VCLog__c.object
<CustomObject>
    <description>Log Information Process</description>
    <fields>
        <fullName>voice_connector__VCCallId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Call Id</label>
        <referenceTo>voice_connector__VCCall__c</referenceTo>
        <relationshipLabel>VCLogs</relationshipLabel>
        <relationshipName>VCLogs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCDateTime__c</fullName>
        <label>Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCProcessedBy__c</fullName>
        <label>Processed By</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Job</fullName>
                </value>
                <value>
                    <fullName>Webhook</fullName>
                </value>
                <value>
                    <fullName>Recrawl</fullName>
                </value>
                <value>
                    <fullName>Trigger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>voice_connector__VCStatus__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>VCLog</label>
    <listViews>
        <fullName>voice_connector__All</fullName>
        <columns>NAME</columns>
        <columns>voice_connector__VCCallId__c</columns>
        <columns>voice_connector__VCStatus__c</columns>
        <columns>voice_connector__VCErrorMessage__c</columns>
        <columns>voice_connector__VCProcessedBy__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VCLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>